начало аутентификации и авторизации
